# ml-app

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.ado/: deployment-template.yaml  main-pipeline.yaml  self-hosted-main-pipeline.yaml
.azure/bicep/: main.bicep
.devcontainer/: Dockerfile  devcontainer.json  init.sh
.github/workflows/: main-gh-pipeline.yaml
scripts/: start_sonarqube.sh
static/css/: style.css
templates/: index.html
tests/: test_dummy.py
